--- a/master-hibernate-pom/pom.xml
+++ b/master-hibernate-pom/pom.xml
@@ -57,9 +57,9 @@
 
             <dependencies>
                 <dependency>
-                    <groupId>com.oracle</groupId>
-                    <artifactId>oracle-thin</artifactId>
-                    <version>10.2.0.4</version>
+                    <groupId>com.oracle.database.jdbc</groupId>
+                    <artifactId>ojdbc10</artifactId>
+                    <version>19.16.0.0</version>
                 </dependency>
             </dependencies>
         </profile>
