--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>intact-master</artifactId>
     <packaging>pom</packaging>
     <name>Master POMs :: Master POM</name>
-    <version>25</version>
+    <version>26-SNAPSHOT</version>
 
     <description>This is a master POM that is meant to be used by the various Intact modules. It contains information
         that is common to all projects.
